# raspos

./: CMakeLists.txt  Makefile  README.md  kernel.lds
src/: boot.S  kernel.c
src/kernel/: CMakeLists.txt
src/kernel/aarch64/: boot.S  kernel.c  layout.lds  toolchain.cmake
src/kernel/arm/: boot.S  flags.cmake  kernel.c  layout.lds  toolchain.cmake
